# Biocham

./: .gitignore  AUTHORS  Biocham128.tiff  Biocham16.tiff  Biocham32.tiff  Biocham48.tiff  BiochamUpdates.xml  ChangeLog  INSTALL  Info.plist.in  Makefile.am  Makefile.in  NEWS  README  TODO  biocham.1  biocham.desktop  biocham.desktop.in  biocham.iss.in  biocham.keys  biocham.mime  biocham.pl  biocham.xml  biochamAnalyze.pl  biochamBioPepa.pl  biochamConserv.pl  biochamDot.pl  biochamGRN.pl  biochamHybrid.pl  biochamKinetics.pl  biochamLearn.pl  biochamLotos.pl  biochamMatlab.pl  biochamMorphisms.pl  biochamNuSMV.pl  biochamOde.pl  biochamPinvar.pl  biochamProlog.pl  biochamReduce.pl  biochamSbml.pl  (+29 more)
DOC/: Makefile.am  Makefile.in  README  manual.html
EXAMPLES/: Makefile.am  Makefile.in
EXAMPLES/MAPK/: mapk.bc  mapk_test.bc
EXAMPLES/cell_cycle/: cell_cycle.bc  cell_cycle_pattern.bc  cell_cycle_test.bc  init_state2.bc
EXAMPLES/cell_cycle_Tyson_6Var/: tyson91.bc  tyson91_fss_parameter_search.bc  tyson91_fss_parameter_search_2.bc  tyson91_fss_parameter_search_8_dim.bc  tyson91_global_sensitivity_analysis.bc  tyson91_parameter_search_examples.bc  tyson91_parameter_search_examples_2.bc  tyson91_parameter_search_examples_8_dim.bc  tyson91_parameter_search_examples_old.bc  tyson91_test.bc
EXAMPLES/kinetics/: 2g.bc  2g_test.bc  MM.bc  MM_test.bc  add_biocham2_test.bc  add_biocham_test.bc  circ.bc  circa_hong2.bc  circa_test.bc  enzyme-ai.bc  enzyme-i.bc  enzyme-s.bc  enzyme_test.bc  event.bc  event_test.bc  kt.bc  kt_test.bc  lv.bc  lv_test.bc  mapk.bc  order1.bc  order2.bc  order_test.bc  stiff.bc  stiff_test.bc
EXAMPLES/locations/: notch4n36c.bc  p53Mdm2.bc  p53Mdm2_test.bc
EXAMPLES/small/: pepa.bc  pinv1.bc  pinv2.bc  pinv3.bc  pinv4.bc  pinv_test.bc  small.bc  small_test.bc
EXAMPLES/small_cell_cycle/: initial_state.bc  small_cell_cycle.bc  small_cell_cycle_test.bc
emacs/: Makefile.am  Makefile.in  bc-mode.el  bc-mode0.el  bc-mode1.el
gui/: BiochamDynamicTree.java  BiochamDynamicTreeActionListener.java  BiochamDynamicTreeRenderer.java  BiochamDynamicTreeSeparator.java  BiochamLoggerThread.java  BiochamMainFrame.java  BiochamModel.java  BiochamModelEditor.java  BiochamModelElement.java  BiochamSplash.java  BiochamWarnings.java  BiochamWorkbenchPart.java  Biocham_l4j.xml.in  MANIFEST.mf  Makefile.am  Makefile.in  TODO  WorkbenchActionListener.java  WorkbenchArea.java  WorkbenchToolBars.java
gui/commandLine/: BiochamCommands.java  BiochamCommands.java.in  SimpleCommandLine.java
gui/customComponents/: BackgroundImagePanel.java  BiochamFrame.java  BiochamInfoLabel.java  BiochamPlot.java  BooleanPlot.java  BrowseButton.java  CmaesConditionPanel.java  CustomBalloonTip.java  CustomChartPanel.java  CustomComboBox.java  CustomLayoutAKDock.java  CustomMultiSelectComboBox.java  CustomOperatorLabel.java  CustomOptionPane.java  CustomPlaf.java  CustomToolTipButton.java  CustomToolTipLabel.java  CustomZoomableImagePanel.java  DatasetCard.java  DeleteButton.java  DisabledGlassPane.java  DnDTabbedPane.java  DraggablePanel.java  DroppableMultiSplitPane.java  GradientPanel.java  ImageContainer.java  ImagePanel.java  InfoTipStyle.java  InfoToolTip.java  JLabel2D.java  ModifyButton.java  PDFViewer.java  ParamTablePanel.java  Plot.java  PlotBox.java  PlotDataTable.java  PlotIconPanel.java  PlotImage.java  ScrollingPanel.java  SimpleComboBox.java  (+5 more)
gui/dialogs/: BiochamSmallDialog.java  CustomInputDialog.java  DialogAddParameter.java  DialogAddSpecification.java  DialogChooseOptions.java  DialogInitialConcentration.java  DialogKinetics.java  DialogOptions.java  DialogPlotCustomize.java  DialogSearchParams.java  DialogSimulation.java  InputDialog.java  InputDialogWithCombobox.java  OutputDialog.java  SatisfactionDegreeDialog.java
gui/documentation/: BiochamDocumentation.java  BiochamDocumentationToolbar.java  TutorialArticle.java
gui/filters/: BiochamFileFilter.java  CSVFileFilter.java  DOTFileFilter.java  FileFilterBiocham.java  FileFilterBiochamTrace.java  FileFilterCsv.java  FileFilterDatasets.java  FileFilterExcel.java  FileFilterExportBiocham.java  FileFilterImage.java  FileFilterImportBiocham.java  FileFilterPDF.java  FileFilterPlot.java  FileFilterTxt.java  FileFilterXml.java  ODEFileFilter.java  PlotFileFilter.java  TEXTFileFilter.java  XMLFileFilter.java
gui/graphicalEditor/: AddReactantProductDialog.java  Association.java  BiochamCellData.java  BiochamCompartmentData.java  BiochamEdge.java  BiochamEdgeData.java  BiochamEdgeHandle.java  BiochamEdgeView.java  BiochamEnitity.java  BiochamEntityData.java  BiochamGraph.java  BiochamGraphConstants.java  BiochamGraphEditorDesktop.java  BiochamGraphListener.java  BiochamGraphModel.java  BiochamObject.java  BiochamPortView.java  BiochamReaction.java  ContainingMolecule.java  CustomEdge.java  CustomIconedCellRenderer.java  CustomLayoutFacade.java  DialogNewMolecule.java  Dissociation.java  DotObject.java  DotReaction.java  DotSourceSink.java  DotToSBGNGraph.java  ECompartmentCell.java  ECompartmentView.java  EComplexCell.java  EComplexView.java  EMacromoleculeCell.java  EMacromoleculeView.java  ENucleicAcidFeatureCell.java  ENucleicAcidFeatureView.java  ESourceSink.java  ESourceSinkNode.java  GraphCellComparator.java  GraphEditorToolbar.java  (+47 more)
gui/legacy/: BiochamApp.java.else  BiochamApp.java.mac  BiochamCommands.java  BiochamCommands.java.in  BiochamFileFilter.java  BiochamGUI.java  BiochamSplash.java  BiochamUpdater.java  BiochamUpdater.java.in  CsvFileFilter.java  DataTable.java  JavaPlot.java  LearnParamDialog.java  LoggerThread.java  Makefile.am  Makefile.in  Manifest.txt  ParamTable.java  XmlFileFilter.java
gui/menus/: BiochamMenuBar.java  ColorMenu.java  CustomColorMenu.java  CustomPopupBiochamPlot.java  CustomPopupCTL.java  CustomPopupCmdLine.java  CustomPopupDotImage.java  CustomPopupLTL.java  CustomPopupMain.java  CustomPopupMenu.java  CustomPopupModel.java  (+11 more)
parsing/: Makefile.am  Makefile.in  lazylist.pl  lexing.pl  parsing.pl  regexp.pl
vim/: Makefile.am  Makefile.in  bc0.vim  bc_syntax.vim  get_commands
(+91 files in other folders)
